<edu.illinois.jchen93.bitstampapiandroid.SlideHolder xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/slideHolder"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity" >

    <ScrollView
        android:layout_width="200dp"
        android:layout_height="fill_parent"
        android:background="@android:color/black" >

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_button1_transaction" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_button2_order_book" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_button3" />

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <com.androidplot.xy.XYPlot
            android:id="@+id/plot1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            title="@string/plot1_title"
            renderMode="use_main_thread"/>
        
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="visible"
            android:text="@string/swipe"
            android:textSize="25sp" />

    </RelativeLayout>

</edu.illinois.jchen93.bitstampapiandroid.SlideHolder>